tests/sksl/errors/Ossfuzz32587.glsl
### Compilation failed:

error: 1: unknown identifier 'x1'
error: 2: symbol 'x' was already defined
2 errors
